<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_hint">login name</string>
    <string name="password">password</string>
    <string name="switchQuestion">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Camera">Camera</string>
    <string name="checkbox_finish_text">Finish Activity</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="cameraPermission">Camera permission is required to take a picture.</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="noCamera">No camera app found</string>
    <string name="response">ListItemsActivity passed</string>
    <string name="responseActual">Here is my response</string>
    <string name="invalidEmail">Invalid email format</string>
    <string name="emptyPassword">Password cannot be empty</string>
    <string name="MainActivityStart">MainActivity started</string>
    <string name="LoginActivityStart">LoginActivity started</string>
    <string name="ListItemsActivityStart">ListItemsActivity started</string>
    <string name="startChat">Start Chat</string>
    <string name="outgoingMsg">Outgoing message</string>
    <string name="incomingMsg">Incoming message</string>
    <string name="msgHint">Type your message</string>
    <string name="send">Send</string>
    <string name="outgoingCallDes">Outgoing Call Icon</string>
    <string name="incomingCallDes">Incoming Call Icon</string>
    <string name="LabelMain">Main Activity</string>
    <string name="LabelLogin">Login Activity</string>
    <string name="LabelChat">Chat Window Activity</string>
    <string name="LabelListItems">List Items Activity</string>

    <string name="toolbar_read">Display Message</string>
    <string name="toolbar_back">Exit</string>
    <string name="toolbar_add">Add a new Message</string>
    <string name="toolbarButton">Test Toolbar</string>
    <string name="dialog_question">Do you want to go back?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="messageHint">New Message</string>
    <string name="dialogueDes">Dialogue box</string>
    <string name="customDialogPrompt">Type your message</string>
    <string name="noMsg">No message entered. Please try again</string>
    <string name="msgConfirm">Message saved!</string>
    <string name="changedMsg">Something that Salam has written</string>
    <string name="version">Version 1.0, by Salam</string>
    <string name="customMsg">You selected item 1</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="weather">Weather Forecast</string>
    <string name="weatherImageDesc">The current weather image</string>
    <string name="currentTemp">Current Temperature is loading</string>
    <string name="minTemp">Minimum Temperature is loading</string>
    <string name="maxTemp">Maximum Temperature is loading</string>
    <string name="lastUpdate">Last Updated: —</string>

    <!-- String array for Canadian cities -->
    <string-array name="canadian_cities">
        <item>Ottawa</item>
        <item>Toronto</item>
        <item>Vancouver</item>
        <item>Montreal</item>
        <item>Calgary</item>
        <item>Edmonton</item>
        <item>Quebec City</item>
        <item>Winnipeg</item>
        <item>Halifax</item>
        <item>Victoria</item>
        <!-- Add more cities as needed -->
    </string-array>

    <string name="MsgHere">MessageHere</string>
    <string name="id">ID=</string>
    <string name="deleteMsg">DELETE THIS MESSAGE</string>
</resources>